# scikit-sparse

./: .gitattributes  .gitignore  .gitmodules  .hgignore  .travis.yml  LICENSE.txt  MANIFEST.in  README  README.md  environment.yml  monkey.py  pyproject.toml  readthedocs.yml  release-checklist.md  release-checklist.sh  release-checklist.txt  setup.cfg  setup.py  versioneer.py
.github/workflows/: ci_test.yml
doc/: changes.rst  cholmod.rst  conf.py  index.rst  overview.rst
fake_pyrex/: README
scikits/sparse/: cholmod.pyx  test_cholmod.py  umfpack.pyx
scikits/sparse/cholmod-extra/: Makefile  README.md
scikits/sparse/cholmod-extra/Docs/: Makefile
scikits/sparse/cholmod-extra/Docs/source/: conf.py  functions.rst  index.rst  install.rst  intro.rst  license.rst
scikits/sparse/cholmod-extra/Include/: cholmod_extra.h  cholmod_extra_internal.h
scikits/sparse/cholmod-extra/Source/: cholmod_test_spinv.c
scikits/sparse/cholmod_sparse_inverse/: cholmod_extra.h  cholmod_extra_internal.h  cholmod_spinv.c
scikits/sparse/sparse_inverse/: cholmod_spinv.c
sksparse/: _version.py  cholmod.pyx  cholmod_backward_compatible.h  test_cholmod.py
tests/: test_cholmod.py
