[tool.black]
line-length = 120
target_version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | _build
    | buck-out
    | build
    | dist
    | doc
    | venv
  )/
)
'''
[build-system]
requires = [
    "setuptools>=40.8.0",
    "wheel",
    "Cython>=0.22",
    'numpy>=1.13.3; python_version>="3.6"',
]
build-backend = "setuptools.build_meta"