[tool.black]
line-length = 120
target_version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | _build
    | buck-out
    | build
    | dist
    | doc
    | venv
  )/
)
'''
[build-system]
requires = [
    "setuptools>=40.8.0",
    "wheel",
    "Cython>=0.22",
    'numpy>=1.13.3; python_version=="3.6"',
    'numpy>=1.14.5; python_version=="3.7"',
    'numpy>=1.17.3; python_version=="3.8"',
    'numpy>=2.0; python_version=="3.9"',
    'numpy>=2.0; python_version=="3.10"',
    'numpy>=2.0; python_version>="3.11"',
    'numpy>=2.0; python_version>="3.12"',
    'numpy>=2.0; python_version>="3.13"',
]
build-backend = "setuptools.build_meta"
